--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,17 +31,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-
+  
     steps:
     - name: Set up kubectl
       uses: azure/setup-kubectl@v3
       with:
         version: 'latest'
   
-    - name: Configure KUBECONFIG
-      run: echo "${{ secrets.KUBECONFIG }}" > /tmp/kubeconfig
-
+    - name: Configure kubectl
+      run: |
+        kubectl config set-cluster my-cluster --server=https://<your-kubernetes-api-server> --insecure-skip-tls-verify=true
+        kubectl config set-credentials github-actions --token=${{ secrets.KUBE_TOKEN }}
+        kubectl config set-context my-context --cluster=my-cluster --namespace=default --user=github-actions
+        kubectl config use-context my-context
+  
     - name: Deploy to Kubernetes
-      env:
-        KUBECONFIG: /tmp/kubeconfig
       run: kubectl apply -f k8s-deployment.yaml
