--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,21 +29,10 @@ jobs:
         tags: ${{ secrets.DOCKER_USERNAME }}/django-app:latest
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build
-  
+    runs-on: self-hosted
     steps:
-    - name: Set up kubectl
-      uses: azure/setup-kubectl@v3
-      with:
-        version: 'latest'
-  
-    - name: Configure kubectl
-      run: |
-        kubectl config set-cluster my-cluster --server=https://<your-kubernetes-api-server> --insecure-skip-tls-verify=true
-        kubectl config set-credentials github-actions --token=${{ secrets.KUBE_TOKEN }}
-        kubectl config set-context my-context --cluster=my-cluster --namespace=default --user=github-actions
-        kubectl config use-context my-context
-  
+    - name: Checkout code
+      uses: actions/checkout@v3
+
     - name: Deploy to Kubernetes
       run: kubectl apply -f k8s-deployment.yaml
