--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,8 +36,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Print working directory
+        run: pwd
+
+      - name: List files in the k8s directory (if applicable)
+        run: ls -al 
+
       - name: List files for debugging
-        run: ls -al
+        run: ls -al k8s/
 
       - name: Deploy to Kubernetes
-        run: kubectl apply -f k8s-deployment.yaml  # Adjust path if necessary
+        run: kubectl apply -f $(pwd)/k8s-deployment.yaml # Adjust path if necessary
